--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dts/ebay-sdk-php",
+    "name": "tokamedia/ebay-sdk",
     "description": "An eBay SDK for PHP. Use the eBay API in your PHP projects.",
     "keywords": ["ebay", "api", "sdk"],
     "homepage": "http://devbay.net/",
@@ -7,13 +7,13 @@
     "license": "(Apache-2.0 and MIT)",
     "authors": [
         {
-            "name": "David T. Sadler",
-            "email": "davidtsadler@googlemail.com",
-            "homepage": "http://davidtsadler.com"
+            "name": "Nic",
+            "email": "tmninh94@gmail.com.com",
+            "homepage": "http://amz.tokamedia.com"
         }
     ],
     "support": {
-        "issues": "https://github.com/davidtsadler/ebay-sdk-php/issues"
+        "issues": "https://github.com/nguyenhieptn/ebay-sdk/issues"
     },
     "require": {
         "php": ">=5.5",
@@ -27,13 +27,13 @@
     },
     "autoload": {
         "psr-4": {
-            "DTS\\eBaySDK\\": "src/"
+            "Toka\\eBaySDK\\": "src/"
         },
         "files": ["src/functions.php"]
     },
     "autoload-dev": {
         "psr-4": {
-            "DTS\\eBaySDK\\Test\\": "test/"
+            "Toka\\eBaySDK\\Test\\": "test/"
         },
         "classmap": ["build/"]
     }
