--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Nic",
-            "email": "tmninh94@gmail.com.com",
+            "email": "tmninh94@gmail.com",
             "homepage": "http://amz.tokamedia.com"
         }
     ],
